--- a/BlogProject/src/index.css
+++ b/BlogProject/src/index.css
@@ -1,1 +1,18 @@
 @import "tailwindcss";
+
+/* Global styles for full-screen layout */
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
